benefits block align fix

--- a/src/components/bem-blocks/benefits.scss
+++ b/src/components/bem-blocks/benefits.scss
@@ -14,6 +14,7 @@
 .benefits__list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 32px;
 }
 
